# LegalGPT

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  API_DOCS.md  ARCHITECTURE.md  checkpointer.py  database.py  init_db.py  main.py  models.py  populate_vectordb.py  promt.md  pyproject.toml  quickstart.sh  requirements.txt
backend/Graph/: agent.py  config.yaml
backend/Graph/tools/: __init__.py  web_search_tool.py
backend/app/api/: auth.py  chat.py  dependencies.py
backend/app/core/: auth.py  checkpointer.py  config.py  prompts.py
backend/app/db/: session.py
backend/app/models/: database.py  services.py
backend/app/prompts/: SKILLS.md  SYSTEM_PROMPT.md  __init__.py
backend/app/schemas/: chat.py  context_memory.py
backend/app/services/: agent.py  context_memory.py  vector_store.py
backend/app/tools/: __init__.py  context_memory_tool.py  legal_tools.py  web_search_tool.py
backend/data - Copy/json/: bns_sections.json  output_bsa.json
backend/notebooks/: test.ipynb  test2.ipynb
backend/src/orchestration/: workflow.py
backend/test/: test.html
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/app/: App.tsx
frontend/src/app/components/: AuthModal.tsx  ChatHeader.tsx  ChatMessage.tsx  EmptyState.tsx  MessageInput.tsx  Sidebar.tsx  ThinkingIndicator.tsx
frontend/src/app/components/ui/: dialog.tsx
frontend/src/app/services/: api.ts
frontend/src/app/types/: chat.ts
notebooks/: csv_to_json.ipynb
src/config/: llm.yaml
src/orchestration/: state.py
