[project]
name = "legalgpt"
version = "0.1.0"
description = "LegalGPT API - Indian Legal System AI Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "deepagents>=0.3.11",
    "fastapi>=0.128.1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.7",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "tavily-python>=0.7.21",
    "uvicorn[standard]>=0.40.0",
]
